--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
  
 <tr>
     <th bgcolor="BurlyWood">专业:</th>
-    <td>网络工程</td>
+    <td>通信工程</td>
     <th bgcolor="BurlyWood">毕业学校:</th>
-    <td>淮南师范学院</td>
+    <td>山东师范大学</td>
     <th bgcolor="BurlyWood">邮编:</th>
     <td>237483</td>
 </tr>
